add security methods